[package]
name = "debbie-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
clap = { version = "*", features = ["derive"] }
tl = "*"
rand = "*"
tokio = { version = "*", features = ["full"] }
tree-sitter = "*"
futures = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
indicatif = "*"
phf = { version = "*", features = ["macros"] }
tar = "*"
flate2 = "*"

[build-dependencies]
cc = "*"
